[gd_scene load_steps=13 format=3 uid="uid://dt37gkonfda6o"]

[ext_resource type="Script" path="res://saveload.gd" id="1_qdvv5"]
[ext_resource type="Script" path="res://Plattformrotation.gd" id="2_5ljwh"]
[ext_resource type="Script" path="res://bricks.gd" id="3_23sm5"]
[ext_resource type="Script" path="res://BallMovement.gd" id="3_ecyqr"]
[ext_resource type="Script" path="res://Countdown.gd" id="4_2c1jh"]
[ext_resource type="Texture2D" uid="uid://ccr7ymw0auavr" path="res://textures/Ball/ball_6x.png" id="4_tlgx8"]
[ext_resource type="Texture2D" uid="uid://bbgbuq4b71ac3" path="res://textures/watch_overlay.png" id="5_ii0v0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afldp"]
size = Vector2(10, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wlin"]
size = Vector2(5, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0q686"]
size = Vector2(5, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_rm76p"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wuw1s"]
radius = 3.0

[node name="Mitte" type="Node2D"]
position = Vector2(198.5, 198.5)
script = ExtResource("1_qdvv5")

[node name="BG" type="ColorRect" parent="."]
visible = false
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="BG"]
layout_mode = 0
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
color = Color(0, 0, 0, 1)

[node name="Plattformrotation" type="Node2D" parent="."]
rotation = 6.28319
script = ExtResource("2_5ljwh")
metadata/platformSize = 5

[node name="Plattform" type="Area2D" parent="Plattformrotation"]
collision_layer = 2

[node name="Mitte" type="CollisionShape2D" parent="Plattformrotation/Plattform"]
position = Vector2(0, 180)
shape = SubResource("RectangleShape2D_afldp")

[node name="Polygon2D" type="Polygon2D" parent="Plattformrotation/Plattform"]
position = Vector2(-0.000808716, 180)
polygon = PackedVector2Array(5, 0, -5, 0, -10, -1, -10, 2, -5, 3, 5, 3, 10, 2, 10, -1)

[node name="Plattform rechts" type="Area2D" parent="Plattformrotation/Plattform"]
collision_layer = 4

[node name="Rechts" type="CollisionShape2D" parent="Plattformrotation/Plattform/Plattform rechts"]
position = Vector2(7.5, 180)
shape = SubResource("RectangleShape2D_6wlin")

[node name="Plattform links" type="Area2D" parent="Plattformrotation/Plattform"]
collision_layer = 8

[node name="Links" type="CollisionShape2D" parent="Plattformrotation/Plattform/Plattform links"]
position = Vector2(-7.5, 180)
shape = SubResource("RectangleShape2D_0q686")

[node name="Countdown" type="Label" parent="."]
offset_left = -40.0
offset_top = -25.0
offset_right = 40.0
offset_bottom = 25.0
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_2c1jh")
metadata/start = false
metadata/Countdown = 3.0

[node name="Lives" type="Label" parent="Countdown"]
layout_mode = 0
offset_left = 20.0
offset_right = 60.0
offset_bottom = 23.0
text = "
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/Lives = 3

[node name="Points" type="Label" parent="Countdown"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Points: 0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/points = 0

[node name="Mitte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mitte"]
shape = SubResource("CircleShape2D_rm76p")

[node name="Bricks" type="Node2D" parent="."]
script = ExtResource("3_23sm5")
metadata/difficulty = 1
metadata/rotation0 = 0.0
metadata/rotation1 = 0.0
metadata/rotation2 = 0.0
metadata/rotation3 = 0.0
metadata/rotation4 = 0.0
metadata/rotation5 = 0.0
metadata/rotation6 = 0.0
metadata/rotation7 = 0.0
metadata/rotation8 = 0.0
metadata/rotation9 = 0.0
metadata/difficultySetting = 1.0

[node name="Layer 0" type="Node2D" parent="Bricks"]

[node name="Layer 1" type="Node2D" parent="Bricks"]

[node name="Layer 2" type="Node2D" parent="Bricks"]

[node name="Layer 3" type="Node2D" parent="Bricks"]

[node name="Layer 4" type="Node2D" parent="Bricks"]

[node name="Layer 5" type="Node2D" parent="Bricks"]

[node name="Layer 6" type="Node2D" parent="Bricks"]

[node name="Layer 7" type="Node2D" parent="Bricks"]

[node name="Layer 8" type="Node2D" parent="Bricks"]

[node name="Layer 9" type="Node2D" parent="Bricks"]

[node name="BallTrajectory" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 400)
width = 1.0

[node name="Ball" type="CharacterBody2D" parent="BallTrajectory"]
position = Vector2(0, 100)
collision_mask = 14
input_pickable = true
script = ExtResource("3_ecyqr")
metadata/maxWinkel = 10
metadata/movementSpeed = 100
metadata/ballSize = 16.0
metadata/eingangswinkel = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallTrajectory/Ball"]
shape = SubResource("CircleShape2D_wuw1s")

[node name="BallSprite" type="Sprite2D" parent="BallTrajectory/Ball"]
texture = ExtResource("4_tlgx8")

[node name="Watch Overlay" type="Sprite2D" parent="."]
texture = ExtResource("5_ii0v0")

[node name="Lost" type="Panel" parent="."]
process_mode = 2
offset_right = 40.0
offset_bottom = 40.0
metadata/lost = false

[node name="Losttext" type="Label" parent="Lost"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 20
text = "oh no
you've lost
you got xxx points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Button" parent="Lost"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 20
text = "Menu"

[node name="Try Again" type="Button" parent="Lost"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 20
text = "Try Again"

[node name="Paused" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Pausedtext" type="Label" parent="Paused"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 30
text = "Game is Paused"

[node name="Resume" type="Button" parent="Paused"]
process_mode = 2
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 30
text = "Resume"

[connection signal="body_entered" from="Plattformrotation/Plattform" to="BallTrajectory/Ball" method="_on_plattform_body_entered"]
[connection signal="body_entered" from="Plattformrotation/Plattform/Plattform rechts" to="BallTrajectory/Ball" method="_on_plattform_rechts_body_entered"]
[connection signal="body_entered" from="Plattformrotation/Plattform/Plattform links" to="BallTrajectory/Ball" method="_on_plattform_links_body_entered"]
[connection signal="pressed" from="Lost/Menu" to="Countdown" method="_on_menu_pressed"]
[connection signal="pressed" from="Lost/Try Again" to="Countdown" method="_on_try_again_pressed"]
[connection signal="pressed" from="Paused/Resume" to="Plattformrotation" method="_on_resume_pressed"]
